test/conformance/chainsaw/validate/clusterpolicy/cornercases/validate-pattern-should-skip-deprecated/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: priv
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: priv-esc
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Lorem ipse
        pattern:
          spec:
            =(initContainers):
              - (image): "!*/foo:*.*.*"
                securityContext:
                  allowPrivilegeEscalation: "false"
            =(containers):
              - (image): "!*/foo:*.*.*"
                securityContext:
                  allowPrivilegeEscalation: "false"
